finalized tools, updated chat model to OpenAI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,10 @@ dependencies = [
     "langchain-community>=0.4.1",
     "langchain-core>=1.2.5",
     "langchain-ollama>=1.0.1",
+    "langchain-openai>=1.1.6",
     "langgraph>=1.0.5",
     "ollama>=0.6.1",
+    "openai>=2.14.0",
     "pandas>=2.3.3",
     "prettytable>=3.17.0",
     "pydantic>=2.12.5",
